--- a/Acme/css/style.css
+++ b/Acme/css/style.css
@@ -158,8 +158,7 @@ article#main-col {
     width: 65%;
 }
 
-/* Services List */
-
+/* Services */
 ul #services li {
     list-style: none;
     padding: 20px;
