--- a/CSS Crash Course/css/style.css
+++ b/CSS Crash Course/css/style.css
@@ -14,20 +14,20 @@ Then there's a property and value, seperated with a colon and ended with a semic
 /*Can use color names, HTML5 color names, hexadecimal, and RGB*/
 
 /*Astrix addresses everything*/
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background-color: #f4f4f4;
     color: #555555;
 
-/*Websafe fonts can be used automatically, others have to be imported*/
+    /*Websafe fonts can be used automatically, others have to be imported*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: normal;
-    
+
     /*Same as above*/
     font: bold 16px, Arial, Helvetica, sans-serif;
 
@@ -39,66 +39,66 @@ body{
     margin: 0;
 }
 
-a{
+a {
     text-decoration: none;
     color: #000;
 }
 
-a:hover{
+a:hover {
     color: blue;
 }
 
-a:active{
+a:active {
     color: green
 }
 
-.container{
+.container {
     /*Using % makes the container responsive*/
     width: 80%;
     margin: auto;
 }
 
-.button{
+.button {
     background-color: #333;
-    color:#fff;
+    color: #fff;
     padding: 10px 15px;
     border: none;
 }
 
-.button:hover{
+.button:hover {
     background: purple;
     color: white;
 }
 
-.clr{
+.clr {
     clear: both;
 }
 
 /*takes the entire box-1 div*/
-.box-1{
-  background-color: #333;
-  color: #fff;
+.box-1 {
+    background-color: #333;
+    color: #fff;
 
-  border-right: 5px red solid;
-  border-left: 5px red solid;
-  border-top: 5px red solid;
-  border-bottom: 5px red solid;
+    border-right: 5px red solid;
+    border-left: 5px red solid;
+    border-top: 5px red solid;
+    border-bottom: 5px red solid;
 
 
-  border-width: 3px;
-  border-bottom-width: 10px;
-  border-top-style: dotted;
+    border-width: 3px;
+    border-bottom-width: 10px;
+    border-top-style: dotted;
 
-  /*Same as first batch of border code*/
-  border: 5px red solid;
+    /*Same as first batch of border code*/
+    border: 5px red solid;
 
-  padding: 20px;
+    padding: 20px;
 
-  margin: 20px 0;
+    margin: 20px 0;
 
 }
 
-.box-1 h1{
+.box-1 h1 {
     font-family: Tahoma;
     font-weight: 800;
     font-style: italic;
@@ -108,69 +108,70 @@ a:active{
     word-spacing: 1em;
 }
 
-.box-2{
+.box-2 {
     border: 3px dotted #ccc;
     padding: 20px;
     margin: 20px 0;
 }
 
-.categories{
+.categories {
     border: 1px #ccc solid;
     padding: 10px;
     border-radius: 15px;
 }
 
-.categories h2{
+.categories h2 {
     text-align: center;
 }
 
-.categories u1{
-    padding:0;
+.categories u1 {
+    padding: 0;
     padding-left: 20px;
     list-style: square;
     list-style: none;
 }
 
-.categories li{
+.categories li {
     padding-bottom: 6px;
     border-bottom: dotted 1px #333;
     list-style-image: url('../images/check.png');
 }
 
-.my-form{
+.my-form {
     padding: 20px;
 }
 
-.my-form .form-group{
+.my-form .form-group {
     padding-bottom: 15px;
 }
 
-.my-form label{
-    display:block;
+.my-form label {
+    display: block;
 }
 
 /*Makes this only target type text and textarea, not the button*/
-.my-form input [type = "text"], .my-form textarea{
+.my-form input [type="text"],
+.my-form textarea {
     padding: 8px;
     width: 100%;
 }
 
-.block{
-    float:left;
+.block {
+    float: left;
     width: 33.3%;
     border: 1px solid #ccc;
     padding: 10px;
     box-sizing: border-box;
 }
 
-#main-block{
+#main-block {
     float: left;
     width: 70%;
     padding: 15px;
     box-sizing: border-box;
 }
 
-#sidebar{
+#sidebar {
     float: right;
     width: 30%;
     background-color: #333;
@@ -182,42 +183,42 @@ a:active{
 /*Positioning has many differnt values */
 /*Static, relative, absolute, fixed, initial, inherit*/
 
-.p-box{
+.p-box {
     width: 800px;
     height: 500px;
     border: 1px solid #000;
     margin-top: 30px;
     position: relative;
-    background-image:url('../images/light.jpg');
+    background-image: url('../images/light.jpg');
     background-repeat: no-repeat;
     background-position: center center;
 }
 
-.p-box h1{
+.p-box h1 {
     position: absolute;
     top: 100px;
     left: 200px;
 }
 
-.p-box h2{
+.p-box h2 {
     position: absolute;
     bottom: 40px;
     right: 100px;
 }
 
-.fix-me{
+.fix-me {
     position: fixed;
     top: 400px;
 }
 
-.my-list li:first-child{
+.my-list li:first-child {
     background: red
 }
 
-.my-list li:last-child{
+.my-list li:last-child {
     background: blue
 }
 
-.my-list li:nth-child(even){
+.my-list li:nth-child(even) {
     background: gray
 }
