--- a/Cafe Cuties Vladimir/css/style.css
+++ b/Cafe Cuties Vladimir/css/style.css
@@ -71,12 +71,12 @@ header nav {
 
 header .highlight,
 header .current a {
-    color: #e8491d;
+    color: #e5e44c;
     font-weight: bold;
 }
 
 header a:hover {
-    color: #cccccc;
+    color: #f868eb;
     font-weight: bold;
 }
 
@@ -84,39 +84,45 @@ header a:hover {
 
 #showcase {
     min-height: 400px;
-    background: url('../images/showcase.jpg') no-repeat 0 -400px;
+    background: url('../images/ccvlad.jpg'); 0, -100px no-repeat;
+    background-size: cover;
     text-align: center;
     color: #ffffff;
 }
 
 #showcase h1 {
-    margin-top: 100px;
+    margin-top: 50px;
     font-size: 55px;
     margin-bottom: 10px;
+    color: #302d24;
 }
 
 #showcase p {
     font-size: 20px;
+    padding: 125px;
+    padding-top: 100px;
+    color: #f90936;
+    font-weight: bold;
 }
 
 /*Newsletter*/
 
-#newsletter {
+#gift {
     padding: 15px;
     color: #ffffff;
     background: #35424a;
 }
 
-#newsletter h1 {
+#gift h1 {
     float: left;
 }
 
-#newsletter form {
+#gift form {
     margin-top: 15px;
     float: right;
 }
 
-#newsletter input[type="email"] {
+#gift input[type="number"] {
     padding: 4px;
     height: 25px;
     width: 250px;
@@ -128,43 +134,28 @@ header a:hover {
     margin-top: 20px;
 }
 
-#boxes .box {
+#boxes .box, #boxes .box1{
     float: left;
+    width: 30%;
     text-align: center;
-    padding: 10px;
-    width: 30%;
+    padding: 10;
 }
 
-#boxes .box img {
-    width: 90px;
+
+#boxes .box img{
+    width: 500px;
 }
 
-/*Sidebar*/
-aside#sidebar {
-    float: right;
-    width: 30%;
-    margin-top: 10px;
+#boxes .box1 img{
+    width: 500px;
 }
 
-aside#sidebar .quote input,
-aside#sidebar .quote textarea {
-    width: 90%;
-    padding: 5px;
+#boxes .box1{
+    margin-left: 350px;
 }
 
-/*Main Col*/
-article#main-col {
-    float: left;
-    width: 65%;
-}
-
-/* Services */
-ul#services li {
-    list-style: none;
-    padding: 20px;
-    border: #cccccc solid 1px;
-    margin-bottom: 5px;
-    background: #e6e6e6;
+#boxes .box{
+    margin-left: 50px;
 }
 
 
@@ -182,11 +173,9 @@ footer {
     header #branding,
     header nav,
     header nav li,
-    #newsletter h1,
-    #newsletter form,
-    #boxes .box,
-    article#main-col,
-    aside#sidebar {
+    #gift h1,
+    #gift form,
+    #boxes .box {
         float: none;
         text-align: center;
         width: 100%;
@@ -200,14 +189,7 @@ footer {
         margin-top: 40px;
     }
 
-    #newsletter button,
-    .quote button {
-        display: block;
-        width: 100%;
-
-    }
-
-    #newsletter form input[type="email"],
+    #gift form input[type="email"],
     .quote input,
     .quote textarea {
         width: 100%;
