--- a/CSS Crash Course/css/style.css
+++ b/CSS Crash Course/css/style.css
@@ -41,7 +41,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: red;
 }
 
 a:hover {
@@ -77,7 +77,7 @@ a:active {
 /*takes the entire box-1 div*/
 .box-1 {
     background-color: #333;
-    color: #fff;
+    color: red;
 
     border-right: 5px red solid;
     border-left: 5px red solid;
@@ -124,11 +124,9 @@ a:active {
     text-align: center;
 }
 
-.categories u1 {
+.categories ul {
     padding: 0;
     padding-left: 20px;
-    list-style: square;
-    list-style: none;
 }
 
 .categories li {
@@ -142,7 +140,7 @@ a:active {
 }
 
 .my-form .form-group {
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 .my-form label {
@@ -156,18 +154,22 @@ a:active {
     width: 100%;
 }
 
+
 .block {
     float: left;
     width: 33.3%;
     border: 1px solid #ccc;
     padding: 10px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 #main-block {
-    float: left;
+float: left;
     width: 70%;
     padding: 15px;
+    border: 1px solid #ccc;
+    width: 33.3%;
     box-sizing: border-box;
 }
 
@@ -211,14 +213,12 @@ a:active {
     top: 400px;
 }
 
-.my-list li:first-child {
-    background: red
+.my-list {
+    background-color: rebeccapurple;
+    color: #fff;
 }
 
-.my-list li:last-child {
-    background: blue
-}
-
-.my-list li:nth-child(even) {
-    background: gray
+.my-list li{
+    list-style: none;
+    margin-left: 10px;
 }
