--- a/Responsive Website/css/style.css
+++ b/Responsive Website/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;500;700&family=Oswald:wght@500&family=Roboto:wght@100&family=Titillium+Web:wght@300&display=swap');
+
+/*Global Styles*/
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,20 +13,12 @@ body {
     font-size: 16px;
     line-height: 1.5em;
     background-color: #6E6E6E;
-    z-index: -1;
 }
 
-.container {
-    max-width: 75%px;
-    margin: 0 auto;
-    padding: 40px 100px;
+ul {
+    list-style-type: none;
 }
 
-.highlight{
-    color: #c3073f;
-}
-
-/*Button*/
 .btn {
     background: #c3073f;
     border: 0;
@@ -38,11 +33,41 @@ body {
     color: #c3073f;
 }
 
+.highlight {
+    color: #c3073f;
+}
+
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
 /*Navbar*/
 .navbar {
-    padding-top: 20px;
+    background: black;
+    border-bottom: 10px solid #464444;
     color: #fff;
-    height: 60px;
+    height: 110px;
+}
+
+.navbar .vlad{
+    font-size: 48px;
+    color: #fff;
+    font-family: 'Montserrat';
+    font-weight: bold;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    font-weight: 500
+}
+
+.navbar a:hover {
+    color: #c3073f;
 }
 
 .navbar .container {
@@ -52,89 +77,255 @@ body {
     height: 100%;
 }
 
-.navbar h1 {
-    font-size: 48px;
-    color: #fff;
-    font-family: 'Montserrat';
-}
-
-.navbar a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: 'Montserrat';
-}
-
-.navbar a:hover {
-    color: #c3073f;
-}
-
-ul {
-    list-style-type: none;
-}
-
 .navbar ul {
     display: flex;
 }
 
 .navbar ul li {
-    margin-left: 75px;
+    margin-left: 65px;
 }
 
-.navbar .btn{
+.navbar .btn {
+    background: rgb(206, 195, 195);
+    color: #000;
     padding-left: 30px;
     padding-right: 30px;
     border-radius: 0px;
 }
 
-.navbar .btn:hover{
-    
+.navbar .btn:hover {
+    background: #c3073f;
+    color: white;
 }
 
-/*Showcase*/
+/*Hamburger Menu*/
 
-.showcase h1 {
+/*General code for hamburger*/
+.navbar-2 {
+    display: none; /*No display at the start*/
     font-family: 'Montserrat';
-    font-weight: 600;
+    width: 100%;
+    background: black;
+    border-bottom: 10px solid #464444;
     color: #fff;
+    height: 110px;
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+}
+
+/*Menu items shown in hamburger menu*/
+.navbar-2 .menu-items {
+    display: flex;
+}
+
+.navbar-2 .nav-container li {
+    list-style: none;
+}
+
+/*Styles for list items*/
+.navbar-2 .nav-container a {
+    text-decoration: none;
+    color: #0e2431;
+    font-weight: 500;
+    font-size: 1.2rem;
+    padding: 0.7rem;
+}
+
+.navbar-2 .nav-container a:hover {
+    font-weight: bolder;
+}
+
+.nav-container {
+    display: block;
+    position: relative;
+    height: 60px;
+}
+
+/*Area that takes in a click to open the hamburger menu*/
+.nav-container .checkbox {
+    position: absolute;
+    display: block;
+    height: 34px;
+    width: 40px;
+    top: 35px;
+    right: 20px;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /*Lines of the hamburger*/
+  .nav-container .hamburger-lines {
+    display: block;
+    height: 34px;
+    width: 40px;
+    position: absolute;
+    top: 35px;
+    right: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  /*Styles for hamburger lines*/
+  .nav-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: red;
+  }
+  
+/*Length of animation*/
+  .nav-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .nav-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .nav-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+
+/*Menu items styles*/
+  .navbar-2 .menu-items {
+    padding-top: 120px;
+    background: rgb(206, 195, 195);
+    height: 100vh;
+    width: 100%;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+    transition: transform 0.5s ease-in-out;
+    text-align: center;
+  }
+  
+  .navbar-2 .menu-items li {
+    margin-bottom: 1.2rem;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  
+
+  .logo {
+    position: absolute;
+    top: 38px;
+    left: 20px;
+    font-size: 32px;
+    color: #fff;
+  }
+
+/*Animation for hamburger menu transformation*/
+.nav-container input[type="checkbox"]:checked~.menu-items {
+    transform: translateX(0);
+}
+
+.nav-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+    transform: rotate(50deg);
+}
+
+.nav-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+    transform: scaleY(0);
+}
+
+.nav-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+    transform: rotate(-50deg);
+}
+
+.nav-container input[type="checkbox"]:checked~.logo {
+    display: none;
+}
+
+/*Home page header*/
+.header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-content: flex-start;
+}
+
+.header {
+    padding-left: 60px;
+    margin-top: 20px;
+    color: #fff;
+    min-height: 400px;
+    line-height: 2.75em;
+}
+
+.header h1 {
+    font-family: 'Montserrat';
     font-size: 64px;
-    width: 1000px;
     line-height: 1.25em;
 }
 
-.showcase {
-    margin-top: 140px;
+.header .bg-image {
+    margin-top: 30px;
+}
+
+/*Stats*/
+.whyheader{
     min-height: 450px;
-    color: #fff;
-    padding-left: 20px;
+    text-align: center;
 }
 
-.showcase{
-    float: left;
-    width: 50%;
+.whyheader h1{
+    font-family: 'Montserrat';
+    
 }
 
-.showcase .container{
-    padding-right: 0;
+/*Meida Queries*/
+@media(max-width: 1044px) {
+    .header{
+        padding: 0 25px;
+        margin-top: 0;
+        line-height: 2.5em;
+    }
+
+    .header h1{
+        font-size: 50px;
+    }
+
+    .header .text{
+        font-size: 13px
+    }
+
+    .container {
+        padding: 0;
+    }
+
+    .navbar {
+        display: none;
+    }
+
+    .navbar-2 {
+        display: block;
+    }
 }
 
-/*Image*/
+@media(max-width: 780px){
+    header .container{
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 
-.image{
-    width: 50%;
-    float: left;
-}
+    .header .text{
+        font-size: 12px;
+    }
 
-.image .container-2{
-    padding-right: 0;
-    padding-left: 0;
-}
+    .header .bg-image{
+        margin-top: 10px;
+    }
 
-.image .bg-image{
-    position: absolute;
-    z-index: -1;
-    margin-left: -20%;
-    margin-top: 90px;
-    width: 65%;
-    height: 70%;
 }
