--- a/Responsive Website/css/style.css
+++ b/Responsive Website/css/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;500;700&family=Oswald:wght@500&family=Roboto:wght@100&family=Titillium+Web:wght@300&display=swap');
 
-/*Global Styles*/
-
+/*Global styles*/
+/*Reset*/
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+/*Basic body styling*/
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 16px;
@@ -17,6 +18,17 @@ body {
 
 ul {
     list-style-type: none;
+}
+
+/*For certain parts of text to be diff colour*/
+.highlight {
+    color: #c3073f;
+}
+
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 50px;
 }
 
 .btn {
@@ -33,41 +45,12 @@ ul {
     color: #c3073f;
 }
 
-.highlight {
-    color: #c3073f;
-}
-
-.container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 50px;
-}
-
-/*Navbar*/
+/*Normal navbar*/
 .navbar {
     background: black;
     border-bottom: 10px solid #464444;
     color: #fff;
-    height: 110px;
-}
-
-.navbar .vlad{
-    font-size: 48px;
-    color: #fff;
-    font-family: 'Montserrat';
-    font-weight: bold;
-}
-
-.navbar a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: 'Montserrat';
-    font-weight: 500
-}
-
-.navbar a:hover {
-    color: #c3073f;
+    height: 90px;
 }
 
 .navbar .container {
@@ -85,11 +68,30 @@ ul {
     margin-left: 65px;
 }
 
+.navbar .home {
+    font-size: 44px;
+    color: #fff;
+    font-family: 'Montserrat';
+    font-weight: bold;
+}
+
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Montserrat';
+    font-weight: 500
+}
+
+.navbar a:hover {
+    color: #c3073f;
+}
+
 .navbar .btn {
     background: rgb(206, 195, 195);
     color: #000;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 25px;
+    padding-right: 25px;
     border-radius: 0px;
 }
 
@@ -98,17 +100,18 @@ ul {
     color: white;
 }
 
-/*Hamburger Menu*/
+/*Hamburger menu*/
 
-/*General code for hamburger*/
+/*Same styles as normal navbar*/
 .navbar-2 {
-    display: none; /*No display at the start*/
+    display: none;
+    /*No display at the start*/
     font-family: 'Montserrat';
     width: 100%;
     background: black;
     border-bottom: 10px solid #464444;
     color: #fff;
-    height: 110px;
+    height: 90px;
 }
 
 .nav-container {
@@ -146,62 +149,64 @@ ul {
     height: 60px;
 }
 
-/*Area that takes in a click to open the hamburger menu*/
+/*Area that takes in a click to open/close the hamburger menu*/
 .nav-container .checkbox {
     position: absolute;
     display: block;
     height: 34px;
     width: 40px;
-    top: 35px;
+    top: 25px;
     right: 20px;
     z-index: 5;
     opacity: 0;
     cursor: pointer;
-  }
-  
-  /*Lines of the hamburger*/
-  .nav-container .hamburger-lines {
+}
+
+/*Lines of the hamburger*/
+.nav-container .hamburger-lines {
     display: block;
     height: 34px;
     width: 40px;
     position: absolute;
-    top: 35px;
+    top: 25px;
     right: 20px;
     z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+    z-index: 2;
+}
 
-  /*Styles for hamburger lines*/
-  .nav-container .hamburger-lines .line {
+/*Styles for hamburger lines*/
+.nav-container .hamburger-lines .line {
     display: block;
     height: 4px;
     width: 100%;
     border-radius: 10px;
     background: red;
-  }
-  
+}
+
 /*Length of animation*/
-  .nav-container .hamburger-lines .line1 {
+.nav-container .hamburger-lines .line1 {
     transform-origin: 0% 0%;
     transition: transform 0.4s ease-in-out;
-  }
-  
-  .nav-container .hamburger-lines .line2 {
+}
+
+.nav-container .hamburger-lines .line2 {
     transition: transform 0.2s ease-in-out;
-  }
-  
-  .nav-container .hamburger-lines .line3 {
+}
+
+.nav-container .hamburger-lines .line3 {
     transform-origin: 0% 100%;
     transition: transform 0.4s ease-in-out;
-  }
+}
 
-/*Menu items styles*/
-  .navbar-2 .menu-items {
+/*Menu items styles and transforming action*/
+.navbar-2 .menu-items {
+    position: fixed;
     padding-top: 120px;
     background: rgb(206, 195, 195);
-    height: 100vh;
+    height: 500vh;
     width: 100%;
     transform: translate(-150%);
     display: flex;
@@ -209,24 +214,25 @@ ul {
     padding-left: 50px;
     transition: transform 0.5s ease-in-out;
     text-align: center;
-  }
-  
-  .navbar-2 .menu-items li {
+    z-index: 1;
+}
+
+.navbar-2 .menu-items li {
     margin-bottom: 1.2rem;
     font-size: 20px;
     font-weight: 500;
-  }
-  
+}
 
-  .logo {
+/*Home button style*/
+.logo {
     position: absolute;
-    top: 38px;
+    top: 30px;
     left: 20px;
     font-size: 32px;
     color: #fff;
-  }
+}
 
-/*Animation for hamburger menu transformation*/
+/*Animation for hamburger lines when clicked*/
 .nav-container input[type="checkbox"]:checked~.menu-items {
     transform: translateX(0);
 }
@@ -247,56 +253,562 @@ ul {
     display: none;
 }
 
-/*Home page header*/
-.header .container {
+/*------------------------------------Home Page--------------------------------*/
+.home-header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     align-content: flex-start;
 }
 
-.header {
-    padding-left: 60px;
+.home-header {
     margin-top: 20px;
     color: #fff;
     min-height: 400px;
-    line-height: 2.75em;
+    line-height: 4.0em;
 }
 
-.header h1 {
+.home-header h1 {
     font-family: 'Montserrat';
     font-size: 64px;
     line-height: 1.25em;
 }
 
-.header .bg-image {
-    margin-top: 30px;
+.home-header .p {
+    line-height: 1.5em;
 }
 
-/*Stats*/
-.whyheader{
-    min-height: 450px;
+.home-header .btn {
+    margin-top: 20px;
+}
+
+/*------------------------------------Footer--------------------------------*/
+
+.footer,
+.footer-spec,
+.footer-spec2 {
+    margin-top: 34px;
+    height: 65px;
+    background-color: #000;
+    color: #fff;
+}
+
+.footer .text,
+.footer-spec .text,
+.footer-spec2 .text {
+    text-align: center;
+    padding-top: 20px;
+    font-size: 12px;
+    padding-left: 5px;
+}
+
+.footer .icons,
+.footer-spec .icons,
+.footer-spec2 .icons {
+    padding-top: 20px;
+    padding-left: auto;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+}
+
+/*Special cases for certain margins*/
+.footer-spec {
+    margin-top: 0;
+}
+
+.footer-spec2 {
+    margin-top: 139px;
+}
+
+/*Social media icons*/
+.fa {
+    padding: 5px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.fa-instagram {
+    background: #c3073f;
+    color: white;
+    margin-left: 30px;
+}
+
+.fa-youtube {
+    background: #c3073f;
+    color: white;
+}
+
+.fa-github {
+    background: #c3073f;
+    color: #fff;
+}
+
+.fa-spotify {
+    background: #c3073f;
+    color: white;
+}
+
+.fa:hover {
+    opacity: 0.8;
+}
+
+/*------------------------------------Stat Page--------------------------------*/
+
+/*Stat page header*/
+.stats-header {
+    text-align: center;
+    background: #464444;
+    border-radius: 20px;
+    margin: 35px 100px 0 100px;
+}
+
+.stats-header h1 {
+    font-family: 'Montserrat';
+    font-size: 48px;
+    color: white;
+}
+
+.stats-header .text {
+    grid-column: 2/4;
+    margin: auto;
+}
+
+.stats-header p {
+    margin-top: 20px;
+    color: white;
+}
+
+.stats-header .container {
+    min-height: 250px;
+    display: grid;
+    grid-template-columns: 1fr repeat(2, 1.5fr)1fr;
+}
+
+.stats-header .btn {
+    margin-top: 5px;
+    display: inline-block;
+}
+
+/*Carousel*/
+.carousel {
+    margin: 35px 150px 0 150px;
+    text-align: center;
+    position: relative;
+}
+
+/*Slide formatting*/
+.slides {
+    width: 100%;
+    display: flex;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    background-color: rgb(206, 195, 195);
+}
+
+.slides::-webkit-scrollbar {
+    display: none;
+}
+
+/*Content of slides formatting*/
+.slides-item {
+    align-items: center;
+    border-radius: 10px;
+    display: flex;
+    flex-shrink: 0;
+    font-size: 100px;
+    height: 600px;
+    justify-content: center;
+    margin: 0 1rem;
+    position: relative;
+    scroll-snap-align: start;
+    transform: scale(1);
+    transform-origin: center center;
+    transition: transform .5s;
+    width: 100%;
+}
+
+/*Carousel navigation formatting*/
+.carousel__nav {
+    padding: 1.25rem .5rem;
+}
+
+/*Buttons formatting*/
+.slider-nav {
+    align-items: center;
+    background-color: #464444;
+    border-radius: 50%;
+    color: #fff;
+    display: inline-flex;
+    height: 1.5rem;
+    justify-content: center;
+    padding: .5rem;
+    position: relative;
+    text-decoration: none;
+    width: 1.5rem;
+}
+
+.slider-nav:hover,
+.slider-nav:active {
+    background-color: #000;
+    color: #c3073f;
+}
+
+.slides .text {
+    line-height: 1.5em;
+}
+
+.slides h1 {
+    font-family: 'Montserrat';
+    color: #c3073f;
+}
+
+.slides p {
+    font-size: 56px;
+}
+
+/*------------------------------------Skin Gallery--------------------------------*/
+
+/*Skin gallery header*/
+.gallery-header .container {
+    display: flex;
+    align-items: top;
+    justify-content: space-between;
+    align-content: flex-start;
+}
+
+.gallery-header {
+    margin-top: 120px;
+    color: #fff;
+    min-height: 100vh;
+    line-height: 2.5em;
+}
+
+.gallery-header .text {
+    margin-top: 50px;
+    line-height: 4.0em;
+}
+
+.gallery-header .bg-image {
+    max-width: 75%;
+    max-height: 75%;
+}
+
+.gallery-header .bg-image2 {
+    display: none;
+    /*no display at start*/
+}
+
+.gallery-header h1 {
+    font-family: 'Montserrat';
+    font-size: 52px;
+    line-height: 1.0em;
+    padding-right: 10px;
+    font-weight: lighter;
+    text-transform: uppercase;
+}
+
+.gallery-header p {
+    font-size: 24px;
+    font-family: 'Montserrat';
+    color: #c3073f;
+    font-weight: bold;
+}
+
+/*Actual skin gallery*/
+#gallery-section {
+    background-color: #464444;
+}
+
+#gallery-section .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
-.whyheader h1{
-    font-family: 'Montserrat';
-    
+.images {
+    margin-top: 15px;
+    color: #fff;
+    width: 90%;
 }
 
-/*Meida Queries*/
+.images p {
+    margin: 5px 0;
+}
+
+.images h1 {
+    font-family: 'Montserrat';
+}
+
+.image1,
+.image2,
+.image3 {
+    padding: 10px;
+    border: rgb(206, 195, 195) 5px solid;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.image1 h1 {
+    color: rgb(90, 207, 40);
+}
+
+.image2 h1 {
+    color: rgb(38, 14, 134);
+}
+
+.image3 h1 {
+    color: rgb(21, 117, 196);
+}
+
+/*------------------------------------Form Page--------------------------------*/
+
+/*Basic styling for form*/
+.form {
+    text-align: center;
+    margin: 50px auto 0 auto;
+    background-color: #000;
+    align-items: center;
+    width: 450px;
+    height: 425px;
+    background-color: #464444;
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgb(49, 48, 48);
+    border-radius: 10px;
+}
+
+.holder {
+    padding: 40px 60px 60px 60px;
+}
+
+/*Styles for the placeholder*/
+::placeholder {
+    color: #000;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.form h1 {
+    padding-top: 45px;
+    font-size: 32px;
+    font-family: 'Montserrat';
+    font-weight: lighter;
+    color: #fff;
+}
+
+/*Text area styling*/
+.subject {
+    resize: none;
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #6E6E6E;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/*Name and donate styling*/
+input[type=text],
+select,
+input[type=number],
+select {
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #6E6E6E;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/*Donate button styling*/
+.form form a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #c3073f;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 30px;
+    letter-spacing: 4px;
+}
+
+/*Effects for hover and line trail*/
+.form a:hover {
+    background: #c3073f;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #c3073f,
+        0 0 25px #c3073f,
+        0 0 50px #c3073f,
+        0 0 100px #c3073f;
+}
+
+/*Styling for the 4 spans on each side of the donate button*/
+/*Animation and colour*/
+.form a span {
+    position: absolute;
+    display: block;
+}
+
+.form a span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #c3073f);
+    animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+    0% {
+        left: -100%;
+    }
+
+    50%,
+    100% {
+        left: 100%;
+    }
+}
+
+.form a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #c3073f);
+    animation: btn-anim2 1s linear infinite;
+    animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+    0% {
+        top: -100%;
+    }
+
+    50%,
+    100% {
+        top: 100%;
+    }
+}
+
+.form a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #c3073f);
+    animation: btn-anim3 1s linear infinite;
+    animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+    0% {
+        right: -100%;
+    }
+
+    50%,
+    100% {
+        right: 100%;
+    }
+}
+
+.form a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #c3073f);
+    animation: btn-anim4 1s linear infinite;
+    animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+    0% {
+        bottom: -100%;
+    }
+
+    50%,
+    100% {
+        bottom: 100%;
+    }
+}
+
+/*------------------------------------About Page--------------------------------*/
+
+/*About page header*/
+.about-header {
+    max-width: 80%;
+    margin: 25px auto 0 auto;
+    text-align: center;
+}
+
+.about-header .text {
+    color: #fff;
+    padding: 20px 5px 0 5px;
+    background-color: #464444;
+    height: 100px;
+    border-radius: 15px;
+    line-height: 2.0em;
+}
+
+.head h1 {
+    font-family: 'Montserrat';
+    font-weight: lighter;
+}
+
+.about-section .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 20px;
+
+}
+
+/*About page info*/
+.block {
+    text-align: center;
+    background-color: rgb(206, 195, 195);
+    padding: 100px;
+    border-radius: 15px;
+}
+
+.block1,
+.block2 {
+    margin-top: 25px;
+}
+
+.block h1 {
+    font-family: 'Montserrat';
+}
+
+.block2,
+.block3,
+.block6 {
+    background-color: #c3073f;
+    color: #fff;
+}
+
+/*Meda Queries*/
 @media(max-width: 1044px) {
-    .header{
+    .home-header {
         padding: 0 25px;
         margin-top: 0;
-        line-height: 2.5em;
+        line-height: 4.0em;
     }
 
-    .header h1{
-        font-size: 50px;
-    }
-
-    .header .text{
+    .header .text {
         font-size: 13px
     }
 
@@ -304,6 +816,7 @@ ul {
         padding: 0;
     }
 
+    /*Hides normal navbar and displays hamburger menu*/
     .navbar {
         display: none;
     }
@@ -311,21 +824,216 @@ ul {
     .navbar-2 {
         display: block;
     }
+
+    /*Turns the 2x3 grid to a 1 x 6*/
+    .about-section .container {
+        padding: 0 50px;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
+    }
+
+    .block2 {
+        margin-top: 0px;
+    }
+
+    /*Changes the styles of certain blocks so they still alternate*/
+    .block3 {
+        background-color: rgb(206, 195, 195);
+        color: #000;
+    }
+
+    .block4 {
+        background-color: #c3073f;
+        color: #fff;
+    }
+
 }
 
-@media(max-width: 780px){
-    header .container{
+@media(max-width: 867px) {
+    .stats-header {
+        display: flex;
+        flex-direction: column;
+        margin: 35px 35px 0 35px;
+    }
+
+    .stats-header h1 {
+        padding-top: 10px;
+
+    }
+
+    .carousel {
+        margin: 35px 85px 0 85px;
+    }
+
+    .vlad {
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media(max-width: 1150px) {
+    .gallery-header .container {
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 10px;
+        align-items: center;
+        padding: 0 20px;
+    }
+
+    .gallery-header {
+        margin-top: 0;
+    }
+
+    .gallery-header .text {
+        margin: 0;
+    }
+
+    .gallery-header .bg-image {
+        align-items: center;
+    }
+
+    .gallery-header p {
+        line-height: 1.5em;
+    }
+
+    .stats-header h1 {
+        line-height: 1.0em;
+        padding-top: 10px;
+    }
+
+    .stats-header .btn {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .home-header .bg-image {
+        margin-top: 10px;
+    }
+
+    .about-header .text {
+        height: 125px;
+    }
+
+    .about-header p{
+        line-height: 1.5em;
+    }
+
+}
+
+@media(max-width: 590px) {
+    .home-header h1 {
+        font-size: 50px;
+    }
+
+    .home-header p,
+    .home-header .btn {
+        line-height: 1.5em;
+        font-size: 16px;
+    }
+
+    .carousel h1 {
+        font-size: 1.25em;
+    }
+
+    .carousel .spec {
+        font-size: 50px;
+    }
+
+    .stats-header p {
+        margin-top: 10px;
+    }
+
+    .gallery-header h1 {
+        font-size: 42px;
+    }
+
+    .images p {
+        font-size: 12px;
+    }
+
+    .form {
+        width: 400px;
+        height: 400px;
+    }
+
+    .about-section .container {
+        padding: 0 10px;
+    }
+
+    .fa-instagram {
+        margin-left: 10px;
+    }
+
+    .fa {
+        padding: 4px;
+        font-size: 15px;
+        width: 25px;
+        margin-right: 5px;
+    }
+}
+
+@media(max-width: 900px) {
+    .home-header .container {
         flex-direction: column;
         text-align: center;
         margin-bottom: 10px;
     }
 
-    .header .text{
-        font-size: 12px;
+    .home-header .text {
+        font-size: 24px;
     }
 
-    .header .bg-image{
+    .home-header .bg-image {
         margin-top: 10px;
     }
 
+    /*Hides the first gallery image and displays the second*/
+    .gallery-header .bg-image2 {
+        display: block;
+    }
+
+    .gallery-header .bg-image {
+        display: none;
+    }
+
+}
+
+@media(max-width: 1260px) {
+    .stats-header h1 {
+        padding-top: 15px;
+    }
+}
+
+@media (max-width: 500px) {
+    .home-header h1 {
+        font-size: 46px;
+    }
+
+    .carousel .text h1 {
+        font-size: 1.0em;
+    }
+
+    /*Makes the footer stack when small*/
+    .footer,
+    .footer-spec,
+    .footer-spec2 {
+        height: 80px;
+    }
+
+    .footer-container {
+        flex-direction: column;
+    }
+
+    .footer .icons,
+    .footer-spec .icons,
+    .footer-spec2 .icons {
+        padding-top: 0;
+        text-align: center;
+    }
+
+    .footer .text,
+    .footer-spec .text,
+    .footer-spec2 .text {
+        padding-top: 10px;
+    }
 }
