--- a/Responsive Website/css/style.css
+++ b/Responsive Website/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;500;700&family=Oswald:wght@500&family=Roboto:wght@100&family=Titillium+Web:wght@300&display=swap');
 
 /*Global styles*/
+
+
 /*Reset*/
 * {
     box-sizing: border-box;
@@ -80,11 +82,34 @@ ul {
     text-decoration: none;
     font-size: 18px;
     font-family: 'Montserrat';
-    font-weight: 500
+    font-weight: 500;
+    position: relative;
+    text-decoration: none;
 }
 
 .navbar a:hover {
     color: #c3073f;
+}
+
+
+.navbar a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: #c3073f;
+    bottom: 0;
+    left: 0;
+
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+}
+
+.navbar a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
 }
 
 .navbar .btn {
@@ -914,7 +939,7 @@ select {
         height: 125px;
     }
 
-    .about-header p{
+    .about-header p {
         line-height: 1.5em;
     }
 
