--- a/Sports Statistics Application/style.css
+++ b/Sports Statistics Application/style.css
@@ -1,22 +1,145 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;500;700&family=Orbitron:wght@600&display=swap');
+
+
+body{
+    overflow: hidden;
+}
+
 .name {
     width: 45%;
 }
 
-a {
+a{
     color: black;
 }
 
-/*
-.container {
-    min-height: 100%;
+.showcase{
+    padding: 0;
+    background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url('./images/worlds3.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+    
+}
+
+.navbar{
+    background-color: transparent;
+}
+
+.navbar .container{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.navbar ul{
+    display: flex;
+}
+
+.navbar ul li {
+    margin-left: 50px;
+}
+
+.navbar a{
+    color: white;
+    font-size: 26px;
+    font-family: 'Helvetica';
+    font-weight: bold;
+    position: relative;
+}
+
+.nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
-    gap: 20px;
 }
 
-.card {
-    flex-basis: calc(50% - 40px);
-
+.black .navbar a{
+    color: black;
 }
-*/
+
+.navbar a:hover{
+    color: rgb(105, 149, 230);
+}
+
+.navbar a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: rgb(105, 149, 230);
+    bottom: 0;
+    left: 0;
+
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+}
+
+.navbar a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.text{
+    color: white;
+    opacity: 0.9;
+    width: 100%;
+    height: 75vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.text h1{
+    font-family: 'Bebas Neue';
+    font-size: 28vw;
+}
+
+.text p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    width: 50%;
+    margin-top: -125px;
+}
+
+.block{
+    display: block;
+}
+
+.hidden {
+    display: none;
+  }
+
+@media (max-width: 1030px){
+    .text p{
+        margin-top: -5vh;
+    }
+}
+
+li{
+    list-style: none;
+}
+
+.nav li{
+    display: inline;
+}
+
+@media (max-width: 875px){
+    .text h1{
+        font-family: 'Bebas Neue';
+        font-size: 28vw
+    }
+    .navbar a{
+        font-size: 18px;
+    }
+    .navbar ul li{
+        margin-left: 30px;
+    }
+}
