--- a/Sports Statistics Application/css/style.css
+++ b/Sports Statistics Application/css/style.css
@@ -240,6 +240,10 @@ li {
     background-color: #171717;
 }
 
+.viewport-height{
+    height: 70vh;
+}
+
 /*media queries*/
 @media(max-width: 660px) {
     .name {
